--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server/server.js",
-  "author":"Julio Sanchez",
+  "author": "Julio Sanchez",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/server/server.js",
-    "start":"node src/server/server.js"
+    "dev": "nodemon src/server/server.js",
+    "start": "node src/server/server.js"
   },
   "keywords": [],
-  
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -19,10 +18,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.4.3",
+    "node-modules": "^1.0.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.4"
   }
 }
