--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "src": "server.js",
+            "src": "./src/server/server.js",
             "use": "@vercel/node"
         }
     ],
