--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "./src/server/server.js"
         }
     ]	
 
